# pastebin

./: .gitignore  Cargo.toml  README.md  findings.md  pastebin.toml  progress.md  task_plan.md
docs/: DEPLOYMENT.md  DOCKER-MIRRORS-CN.md  INTEGRATION_TEST_REPORT.md
scripts/: deploy-to-dmit.sh  integration_test.sh  make-dist-ubuntu2004.sh  make-dist.sh
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  template.rs
static/css/: style.css
static/js/: app.js
templates/: edit.html  index.html  list.html  view.html
