[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
minijinja = "0.5"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
mime = "0.3"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
